--- a/Admin/src/main/resources/templates/login.html
+++ b/Admin/src/main/resources/templates/login.html
@@ -41,26 +41,25 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
-                                    <form class="user">
+                                    <div th:if ="${param.error}" class="alert alert-danger text-center">
+                                        Invalid username or password
+                                    </div>
+                                    <div th:if ="${param.logout}"class="alert alert-danger text-center" >
+                                        You have been logged out!
+                                    </div>
+                                    <form class="user" th:action = "@{/do-login}" method="post">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
+                                            <input type="email" name="username" class="form-control form-control-user"
+                                                id="username" aria-describedby="emailHelp"
                                                 placeholder="Enter Email Address...">
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
+                                            <input type="password" name="password" id="password" class="form-control form-control-user"
+                                                placeholder="Password">
                                         </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Remember
-                                                    Me</label>
-                                            </div>
-                                        </div>
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                        <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Login
-                                        </a>
+                                        </button>
                                         <hr>
                                     </form>
                                     <hr>
@@ -68,7 +67,7 @@
                                         <a class="small" th:href="@{/forgot-password}" href="forgot-password.html">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small"th:href="@{/register}" href="register.html">Create an Account!</a>
+                                        <a class="small" th:href="@{/register}" href="register.html">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
