--- a/Admin/src/main/resources/templates/register.html
+++ b/Admin/src/main/resources/templates/register.html
@@ -47,7 +47,7 @@
                                 <p class = "alert alert-danger" th:text = "${passwordError}"></p>
                             </div>
 
-                            <form th:action ="@{/register-new}" th:object = "${adminDTO}" method="POST">
+                            <form th:action ="@{/register-new}" th:object = "${adminDTO}" method="post">
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input type="text" class="form-control form-control-user" th:field ="*{firstName}" id="exampleFirstName"
